--- a/index.html
+++ b/index.html
@@ -13,21 +13,41 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  Build The Community Your Fans Will Love
+  <main>
+    <div class="top">
+      <img id="logo" src="./images/logo.svg" alt="">
+      <img id="mockup" src="./images/illustration-mockups.svg" alt="">
+    </div>
+    <div class="bottom">
+      <h1>
+        Build The Community Your Fans Will Love
+      </h1>
+      <div class="para">
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion. 
+      </div>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
+      <button> Register</button>
+      <div class="social">
+          <img class="sm" src="./images/facebook_black_logo_icon_147136.svg" alt="">
+          <img class="sm" src="./images/twitter_black_logo_icon_147062.svg" alt="">
+          <img class="sm" src="./images/instagram.svg" alt="">
+      </div>
+    </div>
+  </main>
 
   <footer>
-    <p class="attribution">
+    <!-- <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p> -->
   </footer>
 </body>
 </html>
